--- a/public/index.css
+++ b/public/index.css
@@ -1862,6 +1862,7 @@ button {
 }
 .text-59 {
   display: flex;
+  flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
   position: relative;
@@ -1870,14 +1871,20 @@ button {
   margin: 4px 0 0 4px;
   color: #727272;
   font-family: Nunito Sans, var(--default-font-family);
-  font-size: 8.300000190734863px;
+  font-size: 8.3px;
   font-weight: 700;
   line-height: 11.321px;
   text-align: left;
   text-overflow: ellipsis;
   z-index: 79;
   overflow: hidden;
+  padding-left: 20px;
 }
+.text-59 li {
+  list-style-type: disc;
+  margin-bottom: 4px;
+}
+
 
 .button-container {
   position: absolute;
